--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listado de Materias</title>
+    <title>Materias Impartidas</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -66,13 +66,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Listado de Materias</h1>
-        <p>En el cambiante y dinámico mundo de la Tecnología de la Información, la búsqueda del conocimiento y la actualización constante son fundamentales. En esta sección, te presentamos nuestro Catálogo de Cursos de T.I., una oferta diversa de programas diseñados para nutrir tu comprensión y habilidades en diversas áreas de la tecnología.</p>
+        <h1>El conocimiento del hombre le pertence al mundo. | Millo Houfman</h1>
+        <p>La búsqueda del conocimiento y la actualización constante son fundamentales. En esta sección, te presentamos nuestro Catálogo de Cursos de T.I., una oferta diversa de programas diseñados para nutrir tu comprensión y habilidades en diversas áreas de la tecnología.</p>
         <p>Explora tu Potencial, Avanza con el Conocimiento</p>
         <p>Desde la programación y el desarrollo web hasta la ciberseguridad y la gestión de proyectos, nuestros cursos abarcan un amplio espectro de disciplinas de T.I. Están diseñados tanto para aquellos que dan sus primeros pasos en el mundo tecnológico como para profesionales experimentados que buscan perfeccionar sus habilidades.</p>
         <p>A continuación se muestra el listado de cursos impartidos:</p>
         <ul>
-            <li><a href="https://tuusuario.github.io/materia1">Programaci&oacute;n para Entornos Virtuales</a></li>
+            <li><a href="https://ajgutierr3z.github.io/PVE">Programaci&oacute;n para Entornos Virtuales</a></li>
             <li><a href="https://tuusuario.github.io/materia2">Inteligencia Artificial en Administraci&oacute;n</a></li>
             <li><a href="https://tuusuario.github.io/materia3">Desarrollo de Interfaces para Dispositivos Usables</a></li>
             <li><a href="https://tuusuario.github.io/materia4">Anal&iacute;tica de Datos</a></li>
@@ -80,7 +80,7 @@
         </ul>
     </div>
     <footer>
-        &copy; 2021 Frexus.dev. Todos los derechos reservados.
+        &copy; 2021 Alfredo de Jesús Gutiérrez Gómez. Todos los derechos reservados.
     </footer>
 </body>
 </html>
