--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p>A continuación se muestra el listado de cursos impartidos:</p>
         <ul>
             <li><a href="https://ajgutierr3z.github.io/PVE">Programaci&oacute;n para Entornos Virtuales</a></li>
-            <li><a href="https://ajutierr3z.github.io/AWI4">Aplicaci&oacute;n Web en la Industria 4.0</a></li>
+            <li><a href="https://ajgutierr3z.github.io/AWI4">Aplicaci&oacute;n Web en la Industria 4.0</a></li>
             <li><a href="https://tuusuario.github.io/materia3">Desarrollo de Interfaces para Dispositivos Usables</a></li>
             <li><a href="https://tuusuario.github.io/materia4">Anal&iacute;tica de Datos</a></li>
             <!-- Agrega más materias según sea necesario -->
