--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <ul>
             <li><a href="https://ajgutierr3z.github.io/PVE">Programaci&oacute;n para Entornos Virtuales</a></li>
             <li><a href="https://ajgutierr3z.github.io/AWI4">Aplicaci&oacute;n Web en la Industria 4.0</a></li>
-            <li><a href="https://tuusuario.github.io/materia3">Desarrollo de Interfaces para Dispositivos Usables</a></li>
+            <li><a href="https://ajgutierr3z.github.io/FIN">Fundamentos de Inteligencia de Negocio</a></li>
             <li><a href="https://tuusuario.github.io/materia4">Anal&iacute;tica de Datos</a></li>
             <!-- Agrega más materias según sea necesario -->
         </ul>
