--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li><a href="https://ajgutierr3z.github.io/PVE">Programaci&oacute;n para Entornos Virtuales</a></li>
             <li><a href="https://ajgutierr3z.github.io/AWI4">Aplicaci&oacute;n Web en la Industria 4.0</a></li>
             <li><a href="https://ajgutierr3z.github.io/FIN">Fundamentos de Inteligencia de Negocio</a></li>
-            <li><a href="https://tuusuario.github.io/materia4">Anal&iacute;tica de Datos</a></li>
+            <li><a href="https://ajgutierr3z.github.io/AWI4">Aplicaciones Web para Industria 4.0</a></li>
             <!-- Agrega más materias según sea necesario -->
         </ul>
     </div>
