--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <li><a href="https://ajgutierr3z.github.io/AWI4">Aplicaci&oacute;n Web en la Industria 4.0</a></li>
             <li><a href="https://ajgutierr3z.github.io/FIN">Fundamentos de Inteligencia de Negocio</a></li>
             <li><a href="https://ajgutierr3z.github.io/AWI4">Aplicaciones Web para Industria 4.0</a></li>
+            <li><a href="https://ajgutierr3z.github.io/HACE">Herramientas y Aplicaciones de Comercio Electrónico</a></li>
             <!-- Agrega más materias según sea necesario -->
         </ul>
     </div>
