--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             padding: 0;
         }
         li {
-            margin: 10px 0;
+            margin: 12px 0;
         }
         a {
             text-decoration: none;
@@ -77,6 +77,7 @@
             <li><a href="https://ajgutierr3z.github.io/FIN">Fundamentos de Inteligencia de Negocio</a></li>
             <li><a href="https://ajgutierr3z.github.io/AWI4">Aplicaciones Web para Industria 4.0</a></li>
             <li><a href="https://ajgutierr3z.github.io/HACE">Herramientas y Aplicaciones de Comercio Electrónico</a></li>
+            <li><a href="https://ajgutierr3z.github.io/AED">Aplicación de Estrategias Digitales</a></li>
             <!-- Agrega más materias según sea necesario -->
         </ul>
     </div>
