--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <li><a href="https://ajgutierr3z.github.io/AWI4">Aplicaciones Web para Industria 4.0</a></li>
             <li><a href="https://ajgutierr3z.github.io/HACE">Herramientas y Aplicaciones de Comercio Electrónico</a></li>
             <li><a href="https://ajgutierr3z.github.io/AED">Aplicación de Estrategias Digitales</a></li>
+            <li><a href="https://ajgutierr3z.github.io/DMI">Desarrollo Móvil Integral</a></li>
+            
             <!-- Agrega más materias según sea necesario -->
         </ul>
     </div>
