--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             <li><a href="https://ajgutierr3z.github.io/HACE">Herramientas y Aplicaciones de Comercio Electrónico</a></li>
             <li><a href="https://ajgutierr3z.github.io/AED">Aplicación de Estrategias Digitales</a></li>
             <li><a href="https://ajgutierr3z.github.io/DMI">Desarrollo Móvil Integral</a></li>
-            <li><a href="https://ajgutierr3z.github.io/PW">Programación para Windows</a></li>            
+            <li><a href="https://ajgutierr3z.github.io/PW">Programación para Windows</a></li> 
+            <li><a href="https://ajgutierr3z.github.io/DI">Desarrollo para Internet</a></li> 
             <!-- Agrega más materias según sea necesario -->
         </ul>
     </div>
