--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
             <li><a href="https://ajgutierr3z.github.io/DMI">Desarrollo Móvil Integral</a></li>
             <li><a href="https://ajgutierr3z.github.io/PW">Programación para Windows</a></li> 
             <li><a href="https://ajgutierr3z.github.io/DI">Desarrollo para Internet</a></li> 
+            <li><a href="https://ajgutierr3z.github.io/Estadistica">Estadística</a></li> 
+            
             <!-- Agrega más materias según sea necesario -->
         </ul>
     </div>
