--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             <li><a href="https://ajgutierr3z.github.io/PW">Programación para Windows</a></li> 
             <li><a href="https://ajgutierr3z.github.io/DI">Desarrollo para Internet</a></li> 
             <li><a href="https://ajgutierr3z.github.io/Estadistica">Estadística</a></li> 
+            <li><a href="https://ajgutierr3z.github.io/IngSoft">Ingeniería Software</a></li> 
+            
             
             <!-- Agrega más materias según sea necesario -->
         </ul>
