--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
             <li><a href="https://ajgutierr3z.github.io/DI">Desarrollo para Internet</a></li> 
             <li><a href="https://ajgutierr3z.github.io/Estadistica">Estadística</a></li> 
             <li><a href="https://ajgutierr3z.github.io/IngSoft">Ingeniería Software</a></li> 
-            
-            
+            <li><a href="https://ajgutierr3z.github.io/CII/">Computación II</a></li> 
             <!-- Agrega más materias según sea necesario -->
         </ul>
     </div>
