--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <li><a href="https://ajgutierr3z.github.io/Estadistica">Estadística</a></li> 
             <li><a href="https://ajgutierr3z.github.io/IngSoft">Ingeniería Software</a></li> 
             <li><a href="https://ajgutierr3z.github.io/CII/">Computación II</a></li> 
+            <li><a href="https://ajgutierr3z.github.io/GIE/">Gestión de Informática Empresarial</a></li>
             <!-- Agrega más materias según sea necesario -->
         </ul>
     </div>
